fix(author): broken input due to bad styling

--- a/server/static/css/current.css
+++ b/server/static/css/current.css
@@ -114,9 +114,7 @@ input, button, textarea {
 }
 
 form {
-    position: relative;
     margin-bottom: 2em;
-    overflow: hidden;
 }
 
 form input, form textarea {
